<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game Collections</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_page_text">Home Page</string>
    <string name="games_list_text">Games List</string>
    <string name="search_page_text">Search Page</string>
    <string name="settings_page_text">Settings Page</string>
    <string name="drawer_list_item_text">Home</string>
    <string name="username_text">Harvey Xia</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_barcode_result">BarcodeResultActivity</string>
    <string name="barcode_sacn_result_hint">Barcode Scan Result</string>
    <string name="default_mTitle">Games Collection</string>
    <string name="barcode_scan_result_activity_title">Barcode Scan Result</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="btn_create_db_text">Create Database</string>
    <string name="btn_add_game">Add a Game</string>
    <string name="btn_delete_game_text">Delete a Game</string>
    <string name="btn_get_games_text">Get Games</string>
    <string name="btn_delete_db_text">Delete DB</string>
    <string name="game_title_hint">Game title</string>
    <string name="game_platform_hint">Game Platform</string>
    <string name="id_to_delete_or_get_hint">ID to delete or get</string>
    <string name="btn_get_game_text">Get game by id</string>
    <string name="btn_delete_table_text">Delete Table</string>
    <string name="result_editText_hint">Result will be here.</string>
    <string name="button_update_game_hint">UpdateGame</string>
    <string name="button_table_hint">table</string>
    <string name="button_games_game_hint">games/game</string>
    <string name="title_activity_game_detail">GameDetailActivity</string>
    <string name="no_result_in_database_text">No Games in database.</string>
    <string name="no_result_from_searching_text">No result back from searching.</string>
    <string name="rating_bar_text">Rating:</string>
    <string name="borrower_information_text">Borrower Information</string>
    <string name="borrower_name_hint">Name</string>
    <string name="phone_tag_text">Phone:</string>
    <string name="email_tag_text">Email:</string>
    <string name="game_thumbnail_desc">gameThumbnail</string>
    <string name="game_detail_null_title">Game Detail</string>
    <string name="null_game_title">Null Game</string>
    <string name="back_button_click_toast_text">Please click back button again to quit the app.</string>
    <string name="no_game_in_database_please_use_text">Please use </string>
    <string name="append_please_use_no_game_in_database"> to add your first game!</string>
    <string name="btn_show_contact_detail_text">Show Contact Detail</string>
    <string name="btn_hide_contact_detail_text">Hide Contact Detail</string>
    <string name="app_id">1560498074235480</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="search_hint">Search by keyword</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_list_datasets">ListDatasetsActivity</string>
    <string name="title_activity_list_records">ListRecordsActivity</string>
    <string name="title_activity_list_edit">EditRecordsActivity</string>
    <string name="keyword_input_hint">Input the keyword of the game</string>
    <string name="btn_search_keyword_desc">searchButton</string>
    <string name="login_title">login title</string>
    <string name="result_game_detail_title">Result game detail</string>
    <string name="wish_game_total_tv">Wish Games: </string>
    <string name="lend_game_total_tv">Lend Games: </string>
    <string name="favourite_game_total_tv">Favourite Games: </string>
    <string name="all_game_total_tv">All Games: </string>
    <string name="option_menu_search_title">Search</string>
    <string name="option_menu_scan_title">Scan</string>
</resources>
