<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorContentCardLinear"
    android:orientation="vertical"
    tools:context="com.itgarage.harvey.gamecollections.activities.OnlineGameResultActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <TextView
        android:id="@+id/barcodeScanResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/barcode_sacn_result_hint"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noResultSearchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_result_from_searching_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            card_view:cardBackgroundColor="@color/ColorCardViewBG"
            card_view:cardCornerRadius="4dp">

            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="6">

                <me.xiaopan.android.spear.SpearImageView
                    android:id="@+id/imageViewGameImage"
                    android:layout_width="114dp"
                    android:layout_height="160dp"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_rowSpan="3"
                    android:contentDescription="@string/game_thumbnail_desc" />

                <TextView
                    android:id="@+id/textViewGameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="3dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:maxLines="3"
                    android:text="@string/game_title_hint"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/ColorTextIcon" />

                <ImageView
                    android:id="@+id/imageViewGamePlatform"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_ps4" />

                <TextView
                    android:id="@+id/textViewGamePlatform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/game_platform_hint"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ColorTextIcon"
                    android:visibility="gone" />

                <RatingBar
                    android:id="@+id/gameRatingBar"
                    style="@style/rating_bar_small"
                    android:layout_width="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_height="35dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="3dp"
                    android:numStars="5"
                    android:rating="3"
                    android:stepSize="1.0" />

                <LinearLayout
                    android:id="@+id/gameAttributesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="3dp"
                    android:layout_row="3"
                    android:orientation="vertical"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp" />

                <LinearLayout
                    android:id="@+id/gameBorrowerInfoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="3dp"
                    android:layout_row="5"
                    android:orientation="vertical"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/borrower_information_text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/ColorTextIcon"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/borrowerNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/borrower_name_hint"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/ColorTextIcon" />

                    <TextView
                        android:id="@+id/borrowerEmailTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_tag_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:id="@+id/emailLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <TextView
                        android:id="@+id/borrowerPhoneTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_tag_text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/ColorTextIcon" />

                    <LinearLayout
                        android:id="@+id/phoneLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                </LinearLayout>
            </GridLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>
