<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp"
    card_view:cardCornerRadius="4dp">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">


        <me.xiaopan.android.spear.SpearImageView
            android:id="@+id/imageViewGameImage"
            android:layout_width="114dp"
            android:layout_height="160dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:contentDescription="@string/game_thumbnail_desc" />

        <TextView
            android:id="@+id/textViewGameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:maxLines="3"
            android:paddingLeft="@dimen/button_margin_left"
            android:text="@string/game_title_hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewGamePlatform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:paddingLeft="@dimen/button_margin_left"
            android:text="@string/game_platform_hint"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/gameAttributesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:orientation="vertical"
            android:paddingLeft="@dimen/button_margin_left" />

        <LinearLayout
            android:id="@+id/gameRatingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:orientation="vertical"
            android:paddingLeft="@dimen/button_margin_left">
        </LinearLayout>
    </GridLayout>

</android.support.v7.widget.CardView>